<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="select_country_code">Select Country Code</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="back">Back</string>
</resources>