...
                    "Photographer: \(helper.currentState.currentImage?.photographer ?? "")"
                )
                    .font(.caption)
                    .padding(8)

                Button(action: { helper.triggerImageDownload() }) {
                    Text("Download Image")
                        .padding()
                        .frame(maxWidth: .infinity)
                        .background(Color.blue)
                        .foregroundColor(.white)
                        .cornerRadius(8)
                }
                .padding(.horizontal)
                .alert(isPresented: $helper.showSaveAlert) {
                    if let error = helper.saveError {
                        return Alert(
                            title: Text("Error"),
                            message: Text(error),
                            dismissButton: .default(Text("OK"))
                        )
                    } else {
                        return Alert(
                            title: Text("Success"),
                            message: Text("Image saved to Photos 🎉"),
                            dismissButton: .default(Text("OK"))
...
