appId: com.example.clean.entry
---
- runFlow:
    file: "login.yaml"
- assertVisible: Feed
- assertVisible: Profile
- doubleTapOn:
    point: 4%,9%
- assertVisible: Download Image
- tapOn: Download Image
- tapOn: Back
