appId: com.example.clean.entry.CleanEntry
---
- runFlow:
    file: "login.yaml"
- assertVisible: Feed
- tapOn: Profile
- tapOn: Profile
- tapOn: Logout
- assertVisible: Login

